# base_game

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: main.rs
src/bundle/: player.rs
src/comp/marker/: enemy.rs  player.rs
src/comp/stat/: health.rs  name.rs  xp.rs
src/res/: alternate_res.rs  complex_res.rs  goals_completed.rs  mod.rs  starting_level.rs
