[package]
name = "base_game"
version = "0.1.0"
#author = "victrolaface"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

#[features]
#dev = [
#    "bevy/dynamic",
#]

[dependencies]
bevy = { version = "0.9.0", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.13.0" }
bevy_asset_loader = { version = "0.13.0" }
rand = { version = "0.8.5" }

# sync with Bevy dependencies
winit = { version = "0.27.5", default-features = false }
image = { version = "0.24.5", default-features = false }

[build-dependencies]
embed-resource = "1.4.1"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-Zshare-generics=n"]
