[package]
name = "base_game"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.9.0", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.13.0" }
bevy_asset_loader = { version = "0.14.1" }
rand = { version = "0.8.5" }

# sync with Bevy dependencies
winit = { version = "0.27.5", default-features = false }
image = { version = "0.24.5", default-features = false }
bevy_rapier2d = "0.19.0"
bevy_ecs_ldtk = "0.5.0"
bevy_ecs_tilemap = "0.9.0"
ldtk_rust = "0.6.0"
leafwing-input-manager = "0.7.1"
serde = "1.0.152"
serde_json = "1.0.91"
iyes_loopless = "0.9.1"
iyes_progress = "0.7.1"

[build-dependencies]
embed-resource = "1.4.1"

#[features]
#dev = [
#    "bevy/dynamic",
#]